<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/back_dialog_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/back_dialog_desc"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/md_theme_light_primary"
            android:gravity="center"
            android:text="@string/back_dialog_yes"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/md_theme_light_primary"
            android:gravity="center"
            android:text="@string/back_dialog_no"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</LinearLayout>